--- a/view/sobre.html
+++ b/view/sobre.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
  <title>Sobre </title>
-  <link ref="stylesheet" hrel="..style/style.css" />
+  <link ref="stylesheet" hrel="..style/style.css">
 </head>
 <body>
   <h1>Sobre o Projeto </h1>
   <nav>
-    <a href="..index.html">Início</a>
+    <a href="../index.html">Início</a>
     <a href="sobre.html">Sobre</a>
     <a href="contato.html">Contato</a>
   </nav>
